# uitea

./: CONTRIBUTING.md  LICENSE.md  README.md  package-lock.json  package.json  vite.config.ts
src/: App.tsx  Global.css  GlobalStyle.ts
src-tauri/: Cargo.toml  tauri.conf.json  user-settings.db
src-tauri/capabilities/: default.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: application.rs  domain.rs  exposition.rs  main.rs  repository.rs
src-tauri/src/application/: color_picker_application.rs  design_system_application.rs  home_application.rs  palette_builder_application.rs  token_crafter_application.rs  undo_application.rs
src-tauri/src/domain/: color_picker_domain.rs  design_system_domain.rs  fonts_domain.rs  home_domain.rs  image_domain.rs  palette_builder_domain.rs
src-tauri/src/exposition/: color_picker_exposition.rs  design_system_exposition.rs  home_exposition.rs  palette_builder_exposition.rs  token_crafter_exposition.rs
src-tauri/src/repository/: color_picker_repository.rs  design_system_repository.rs  fonts_repository.rs  home_repository.rs  palette_builder_repository.rs  undo_repository.rs
src/domain/: ColorPickerDomain.ts  DesignSystemDomain.ts  ExportDomain.ts  HomeDomain.ts  ImageDomain.ts  PaletteBuilderDomain.ts
src/features/color-picker/: ColorPicker.tsx  (+14 more)
src/ui/: FontsConstants.ts  ShadowsConstants.ts  UiConstants.ts
src/util/: ArrayMove.ts  CopyUtil.ts  DateUtil.ts  DesignSystemUtils.ts  DisplayImageUtil.ts  DivClickOutside.ts  DraggableContext.ts  Export.ts  FindClosestPoints.ts  HeaderTools.ts  HookFormUtils.ts  Interpolation.ts  PaletteBuilderStore.ts  PaletteBuilderTwoStore.ts  ParseShadowsUtil.ts  PickerArray.ts  PickerUtil.ts  PositionUtil.ts  Quote.ts  RefreshDesignSystemFormsEvent.ts  ScrollTriggerRefresh.ts  SidebarComponentVisible.ts  Steps.ts  SynchronizedScroll.ts  ThemeGenerator.ts  TintsNaming.ts  TriggerScrollEvent.ts  UndoRedo.ts  useDivClickOutside.ts
(+291 files in other folders)
